# nbase

./: README.md  pubspec.yaml
example/: 0nvNB  README.md  m  pubspec.yaml
example/lib/: main.dart
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: nbase.dart  nbase_method_channel.dart  nbase_platform_interface.dart
test/: nbase_test.dart
windows/: CMakeLists.txt  nbase_plugin.cpp  nbase_plugin.h  nbase_plugin_c_api.cpp
windows/include/nbase/: nbase_plugin.h  nbase_plugin_c_api.h
